fix: quantity selector on mobile, add rounded buttons modifier

--- a/packages/shared/styles/components/atoms/SfQuantitySelector.scss
+++ b/packages/shared/styles/components/atoms/SfQuantitySelector.scss
@@ -6,55 +6,64 @@
   position: relative;
   align-items: center;
   justify-content: center;
-  height: var(--quantity-selector-height, 3.5rem);
-  width: var(--quantity-selector-width, 23.4375rem);
-  padding: var(--quantity-selector-padding, 0);
-  background: var(--quantity-selector-background);
+  height: var(--quantity-selector-height, 2.5rem);
+  width: var(--quantity-selector-width, 6.75rem);
+  padding: var(--quantity-selector-padding, 0 var(--spacer-xs));
+  background: var(--quantity-selector-background, var(--c-white));
   &__button {
-    --button-size: 1.625rem;
-    --button-color: var(--c-text);
-    --button-background: var(--c-light);
+    --button-height: var(--quantity-selector-height, auto);
     --button-padding: 0;
+    --button-color: var(--c-text);
+    --button-background: transparent;
     --button-font-size: var(--font-xl);
-    --button-border-radius: 50%;
     --button-font-line-height: 1;
+    --button-font-weight: var(--font-light);
     align-items: center;
     &:hover {
-      --button-background: var(--c-light);
-      box-shadow: none;
+      --button-background: transparent;
+      --button-box-shadow: none;
     }
   }
   &__input {
+    --input-bar-display: none;
     --input-margin: 0;
     --input-padding: 0;
     --input-border: none;
-    --input-height: 3.5rem;
+    --input-height: 2.5rem;
     --input-text-align: center;
-    --input-bar-display: none;
     --input-font-size: var(--font-xl);
+    --input-font-weight: var(--font-light);
   }
-  &::before {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background: var(--c-light);
-    transition: none;
-    content: "";
+  @include for-mobile {
+    &--rounded-buttons {
+      --quantity-selector-width: 23.4375rem;
+      .sf-quantity-selector__button {
+        --button-size: 1.625rem;
+        --button-padding: 0;
+        --button-border-radius: 50%;
+        --button-background: var(--c-light);
+        --button-font-size: var(--font-xl);
+        --button-font-line-height: 1;
+      }
+      &::before {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: var(--c-light);
+        transition: none;
+        content: "";
+      }
+    }
   }
   @include for-desktop {
-    --quantity-selector-background: var(--c-light);
-    --quantity-selector-width: 6.75rem;
     --quantity-selector-height: 3.25rem;
-    --quantity-selector-padding: 0 var(--spacer-xs);
-    --quantity-selector-button-border-radius: 0;
+    --quantity-selector-background: var(--c-light);
     &__button {
       --button-height: var(--quantity-selector-height, auto);
-      --button-background: transparent;
       &:hover {
-        text-shadow: var(--dark-base);
-        --button-background: transparent;
+        text-shadow: 0 4px 4px var(--c-dark);
       }
     }
     &--small {
@@ -63,13 +72,9 @@
       .sf-quantity-selector__button {
         --button-background: transparent;
         &:hover {
-          text-shadow: var(--dark-base);
-          --button-background: transparent;
+          text-shadow: 0 4px 4px var(--c-dark);
         }
       }
-    }
-    &::before {
-      display: none;
     }
   }
 }
